# Hydrogen

./: .gitignore  CMakeLists.txt  LICENSE  generate_sln.bat  setup.bat
include/: basicTypes.h  buffer.h  commandAllocatorPool.h  commandListPool.h  commandQueue.h  config.h  copyContext.h  descriptorHeap.h  device.h  engine.h  frameGraph.h  frameGraphBuilder.h  frameGraphResourceCache.h  frameGraphStructs.h  frameResources.h  gpuResource.h  gpuUploader.h  graphicsContext.h  indexAllocators.h  linearIndexAllocator.h  logger.h  meshLoader.h  pipelineState.h  renderer.h  rootSignature.h  shader.h  shaderCompiler.h  shaderInterop.h  staticMesh.h  stringUtilities.h  swapChain.h  texture.h  timer.h  uploadRingBuffer.h  verifier.h  window.h
include/renderPasses/: animateBackground.h  clearPass.h  copyPass.h  overlappingRectsPass.h  renderPass.h  testTrianglePass.h
shaders/: animateBackground.ps  animateBackground.vs  overlappingRects.vs  testShader.ps  testShader.vs
src/: commandAllocatorPool.cpp  commandListPool.cpp  commandQueue.cpp  descriptorHeap.cpp  device.cpp  engine.cpp  frameGraph.cpp  frameGraphBuilder.cpp  frameGraphResourceCache.cpp  gpuUploader.cpp  logger.cpp  main.cpp  meshLoader.cpp  pipelineState.cpp  renderer.cpp  rootSignature.cpp  shaderCompiler.cpp  swapChain.cpp  uploadRingBuffer.cpp  window.cpp
src/renderPasses/: animateBackground.cpp  clearPass.cpp  copyPass.cpp  overlappingRectsPass.cpp  testTrianglePass.cpp
